// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateBody when validation is successful should return input 1`] = `
Object {
  "_tag": "Right",
  "right": "foo",
}
`;

exports[`validateBody when validation is unsuccessful should log errors 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "code": "BODY_VALIDATION_ERROR",
        "message": "Expecting string but instead got: 5",
      },
    },
  ],
]
`;

exports[`validateBody when validation is unsuccessful should return error 1`] = `
Object {
  "_tag": "Left",
  "left": Object {
    "code": "BODY_VALIDATION_ERROR",
    "message": "Expecting string but instead got: 5",
  },
}
`;
